--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,7 @@
   "main": "angular-carousel.js",
   "license": "Apache",
   "dependencies" : {
-    "angular" : null,
+    "angular" : "1.2.x",
     "jquery" : null
   },
   "keywors" : [
